[gd_scene load_steps=17 format=3 uid="uid://ba0qpa3313x78"]

[ext_resource type="Script" path="res://Games/MiningMinigame/Scripts/Menu/Login/login_manager.gd" id="1_iqda5"]
[ext_resource type="Shader" path="res://Games/MiningMinigame/Shaders/scrolling_background.gdshader" id="2_ohxcb"]
[ext_resource type="Texture2D" uid="uid://cic6ilj6c0gbn" path="res://Games/MiningMinigame/textures/GUI/LinePattern.png" id="3_q0437"]
[ext_resource type="Texture2D" uid="uid://b8i1obr6qaasa" path="res://Games/MiningMinigame/textures/GUI/BoxPattern.png" id="3_utv5g"]
[ext_resource type="Texture2D" uid="uid://dndirqodqfen6" path="res://Games/MiningMinigame/textures/GUI/CaveEntrance.png" id="4_yb0vn"]
[ext_resource type="Texture2D" uid="uid://d2a6hpyej5k7c" path="res://Games/MiningMinigame/textures/GUI/rockformation.png" id="5_gwrkc"]
[ext_resource type="Theme" uid="uid://ds48g7imsbnvb" path="res://Games/MiningMinigame/Themes/ToilMines.tres" id="6_2oe7d"]
[ext_resource type="PackedScene" uid="uid://dhda75lpyjtjg" path="res://Games/MiningMinigame/Scripts/Menu/Login/WalletAdapter.tscn" id="7_5waap"]
[ext_resource type="Texture2D" uid="uid://bcc0delvuoilo" path="res://Games/MiningMinigame/textures/Art/Logos/Logo small transparent.png" id="7_kwc2t"]
[ext_resource type="Script" path="res://Scripts/Utility/secret_code_input.gd" id="10_ymbvl"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_twphi"]
shader = ExtResource("2_ohxcb")
shader_parameter/scroll_speed = 0.12
shader_parameter/angle_degrees = 45.0
shader_parameter/tiling = Vector2(0.8, 0.8)
shader_parameter/tint = Color(0.223529, 0.0352941, 0.278431, 0.431373)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jrmhk"]
shader = ExtResource("2_ohxcb")
shader_parameter/scroll_speed = -0.3
shader_parameter/angle_degrees = 0.0
shader_parameter/tiling = Vector2(1, 1)
shader_parameter/tint = Color(1, 1, 1, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_y06mw"]
shader = ExtResource("2_ohxcb")
shader_parameter/scroll_speed = 0.3
shader_parameter/angle_degrees = 0.0
shader_parameter/tiling = Vector2(1, 1)
shader_parameter/tint = Color(1, 1, 1, 1)

[sub_resource type="Animation" id="Animation_ys4oc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ButtonContainer:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(648, 340)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RockFormation:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(382, 181)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Logo:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("LogoText:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(355, 338)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("LogoText:self_modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("BackgroundDetails:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("ButtonContainer:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_886ag"]
resource_name = "login_zoom"
length = 0.6
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ButtonContainer:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(648, 340), Vector2(1369, 340)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RockFormation:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.45),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(382, 181), Vector2(382, 719)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Logo:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.15, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.1, 1.1), Vector2(1e-05, 1e-05)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("LogoText:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(355, 338), Vector2(457, 338)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("LogoText:self_modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("BackgroundDetails:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.25, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(2.4, 2.4)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("ButtonContainer:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5muqs"]
_data = {
"RESET": SubResource("Animation_ys4oc"),
"login_zoom": SubResource("Animation_886ag")
}

[node name="LoginScene" type="Control" node_paths=PackedStringArray("wallet_adapter_ui")]
clip_contents = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_iqda5")
scene_path = "res://Games/MiningMinigame/Scenes/MainMenu.tscn"
game_scene_path = "res://Games/MiningMinigame/Scenes/MiningMinigame.tscn"
wallet_adapter_ui = NodePath("WalletAdapterUI")

[node name="BackgroundColor" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.482353, 0.329412, 0.501961, 1)

[node name="BackgroundTexture" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_twphi")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_utv5g")
stretch_mode = 1

[node name="BackgroundDetails" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(640, 360)

[node name="DiamondStripTop" type="TextureRect" parent="BackgroundDetails"]
material = SubResource("ShaderMaterial_jrmhk")
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.147
offset_left = 387.0
offset_top = -102.0
offset_right = -387.0
offset_bottom = -143.84
grow_horizontal = 2
grow_vertical = 2
rotation = 0.261799
scale = Vector2(2, 2)
texture = ExtResource("3_q0437")
stretch_mode = 1

[node name="BackgroundCave" type="TextureRect" parent="BackgroundDetails"]
self_modulate = Color(0.290196, 0.188235, 0.321569, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(640, 360)
texture = ExtResource("4_yb0vn")

[node name="DiamondStripBottom" type="TextureRect" parent="BackgroundDetails"]
material = SubResource("ShaderMaterial_y06mw")
layout_mode = 1
anchors_preset = -1
anchor_left = -0.001
anchor_top = 0.769
anchor_right = 1.0
anchor_bottom = 0.995
offset_left = -217.72
offset_top = -153.68
offset_right = -938.0
offset_bottom = -252.4
grow_horizontal = 2
grow_vertical = 2
rotation = 0.261799
scale = Vector2(2, 2)
texture = ExtResource("3_q0437")
stretch_mode = 1

[node name="RockFormation" type="TextureRect" parent="."]
self_modulate = Color(0.290196, 0.188235, 0.321569, 1)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -898.0
offset_top = -539.0
offset_right = 92.2577
offset_bottom = 136.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("5_gwrkc")
expand_mode = 3

[node name="Logo" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 31.0
offset_top = 13.0
offset_right = 669.0
offset_bottom = 424.0
texture = ExtResource("7_kwc2t")

[node name="LogoText" type="Label" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 355.0
offset_top = -22.0
offset_right = 728.0
offset_bottom = 73.0
grow_vertical = 2
theme = ExtResource("6_2oe7d")
text = "Ultimate Memecoin Mining Experience"
autowrap_mode = 2

[node name="ButtonContainer" type="Control" parent="."]
layout_mode = 1
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.954
offset_left = -632.0
offset_top = -20.0
offset_bottom = 33.1199
grow_horizontal = 0
grow_vertical = 2

[node name="ConnectButton" type="Button" parent="ButtonContainer"]
layout_mode = 0
offset_left = 51.0
offset_top = 211.0
offset_right = 534.0
offset_bottom = 293.0
theme = ExtResource("6_2oe7d")
theme_override_font_sizes/font_size = 71
text = "CONNECT!"

[node name="AboutButton" type="Button" parent="ButtonContainer"]
layout_mode = 0
offset_left = 234.0
offset_top = 123.0
offset_right = 511.0
offset_bottom = 184.0
theme = ExtResource("6_2oe7d")
theme_override_font_sizes/font_size = 46
text = "ABOUT"

[node name="WalletAdapterUI" parent="." instance=ExtResource("7_5waap")]
visible = false
layout_mode = 1
pivot_offset = Vector2(210, 192)

[node name="SigningOverlay" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -312.5
offset_top = -47.5
offset_right = 312.5
offset_bottom = 47.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("6_2oe7d")
theme_type_variation = &"HeaderSmall"
theme_override_font_sizes/font_size = 71
text = "Signing..."
horizontal_alignment = 1
autowrap_mode = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_5muqs")
}

[node name="SecretCodeInput" type="Node" parent="."]
script = ExtResource("10_ymbvl")
available_codes = Array[String](["axelgoat", "bigdig"])
disable_on_solved = false

[connection signal="pressed" from="ButtonContainer/ConnectButton" to="." method="_on_connect_button_pressed"]
